# solaceai-prototype

./: .env.example  .env_example  .gitignore  DOCKER.md  Makefile  QUERY_REFINEMENT_IMPLEMENTATION.md  QUERY_REFINEMENT_INTEGRATION.md  README.md  README_bk.md  README_original.md  SETUP_BASE_RERANKER.md  SETUP_GUIDE.md  SETUP_LARGE_RERANKER.md  SETUP_MODAL_AI.md  SETUP_SMALL_RERANKER.md  Tiltfile  commit_message.txt  docker-compose.hybrid.yaml  docker-compose.scale.yaml  docker-compose.yaml  log_monitor.py  package-lock.json  package.json  pyproject.toml  reranker_service.py  start_hybrid.sh  test_api_logging.py  test_refinement_logging.py
api/: Dockerfile  dev.sh  lib_example.py  pyproject.toml  requirements.txt  reranker_requirements.txt  reranker_service.py  start.sh  table_example.py  test_config.py  test_exact_mapping.py  test_remote_architecture.py  test_remote_client.py  test_reranker_alignment.py
api/run_configs/: README.md  biencoder.json  crossencoder.json  default.json  flag_embedding.json  remote_reranker.json  remote_with_fallback.json
api/run_configs/configs/: low_memory.json  low_memory_mixedbread.json
api/scholarqa/: __init__.py  app.py  glog.py  models.py  run.py  scholar_qa.py  utils.py
api/scholarqa/config/: config_setup.py
api/scholarqa/llms/: constants.py  litellm_helper.py  prompts.py  rate-limiter.py  rate_limiter.py
api/scholarqa/postprocess/: json_output_utils.py
api/scholarqa/preprocess/: query_preprocessor.py  query_refiner.py
api/scholarqa/rag/: multi_step_qa_pipeline.py  retrieval.py  retriever_base.py
api/scholarqa/rag/reranker/: ai2-scholar-qa-reranker.py  modal_engine.py  remote_reranker.py  reranker_base.py
api/scholarqa/rag/reranker/modal_deploy/: ai2-scholar-qa-reranker.py  custom_cross_encoder.py
api/scholarqa/state_mgmt/: local_state_mgr.py  locked_state.py
api/scholarqa/table_generation/: column_suggestion.py  prompts.py  table_generator.py  table_model.py  value_generation.py
api/scholarqa/trace/: event_traces.py  trace_writer.py
api/solaceai/: __init__.py  app.py  glog.py  models.py  solace_ai.py  utils.py
api/solaceai/config/: config_setup.py
api/solaceai/llms/: constants.py  litellm_helper.py  rate_limiter.py
api/solaceai/postprocess/: json_output_utils.py
api/solaceai/preprocess/: query_preprocessor.py
api/solaceai/rag/: multi_step_qa_pipeline.py  retrieval.py  retriever_base.py
api/solaceai/rag/reranker/: MODAL_AI_SETUP.md  local_service_reranker.py  modal_engine.py  remote_reranker.py  reranker_base.py
api/solaceai/rag/reranker/modal_deploy/: ai2-scholar-qa-reranker.py  custom_cross_encoder.py
api/solaceai/state_mgmt/: local_state_mgr.py
api/solaceai/table_generation/: column_suggestion.py  table_generator.py  value_generation.py
api/solaceai/trace/: event_traces.py  trace_writer.py
api/test_scripts/: PROMPT_DOCUMENTATION.md  README.md  benchmark_optimizations.py  run_pipeline_stage1.py  run_pipeline_stage2.py  run_pipeline_stage3.py  run_pipeline_stage4.py  run_pipeline_stage5.py  run_pipeline_stage6.py  test_evidence_extraction.py  test_exact_mapping.py  test_optimized_settings.py  test_query_decomposition.py  test_query_refinement_step.py  test_remote_architecture.py  test_remote_client.py  test_reranker_alignment.py  test_reranking.py  test_retrieval.py  test_table_generation_simple.py  venv_utils.py
api/test_scripts/other_debugging_scripts/: test_exact_mapping.py  test_remote_architecture.py  test_remote_client.py  test_reranker.py  test_reranker_alignment.py
docs/: DOCKER.md  MODAL.md  response_1738985067740.json  sample_response
proxy/: local.conf  nginx.conf  prod.conf
reranker_service/: Dockerfile  Makefile  README.md  convert_simple.py  deployment.yaml  high_performance_service.py  requirements.txt  requirements_simple.txt  reranker.py  reranker_service.py  simple_onnx_service.py  test_integration.py
(+66 files in other folders)
